--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "StormShield's aim is to retrieve weather alerts detected by weather monitoring organizations and cross-reference them with the locations of Orange customers' mobiles to alert them.",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mysql2": "^3.11.5"
   }
 }
